--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
      
     </div>
 </section>
+
+<section class="buy-tickets">
+  <h1>buy the exclusive seats to get <br> the premium feeling</h1>
+  <div class="buy-now-btn">
+  <a href="#">Buy Now <i class="fas fa-ticket-alt"></i></a>
+  </div>
+</section>
+
 <!-- Hot Deal Start  -->
 <section>
   <div class="bg-primary">
